<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="70dp"
    android:orientation="vertical"
    tools:context=".Signup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_margin="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@color/gray"
            android:padding="10dp"
            android:id="@+id/etUsername"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@color/gray"
            android:padding="10dp"
            android:id="@+id/etPassword"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@color/gray"
            android:padding="10dp"
            android:id="@+id/etConfirmPassword"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/btnSignup"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textSize="20sp"
        android:padding="15dp"
        android:layout_margin="20dp"/>

</LinearLayout>